# PersonaLens

./: .gitignore  Makefile  README.md  VERIFICATION_REPORT.md  fix_bib.py  patch_prompts.py  pyproject.toml  requirements.txt  run_tests.py  validate_fixes.py
baseline_results/Qwen_Qwen2.5-0.5B-Instruct/: baselines_openness_high.json
baseline_results/Qwen_Qwen3-0.6B/: baselines_extraversion_high.json  baselines_openness_high_alpha3.0.json  baselines_openness_high_alpha5.0.json  (+2 more)
defense_mechanism_analysis/: defense_hierarchy_5models.json  defense_orthogonality_Qwen3_L5.json  defense_orthogonality_Qwen_Qwen3-0.6B_L14.json  defense_orthogonality_crossmodel.json  full_defense_orthogonality.json
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  main.tex.backup  references.bib
pdf_texts/: 11066_From_Traits_to_Circuits_.pdf.txt  2025.findings-acl.679.pdf.txt  2310.01405v4.pdf.txt  2408.11779v2.pdf.txt  2507.21509v3.pdf.txt  2510.10157v2.pdf.txt  2511.03738v1.pdf.txt  2512.17639v2.pdf.txt  2602.06801v2.pdf.txt  2777_PersonaForge_Psychology_G (1).pdf.txt  NeurIPS-2023-inference-time-intervention-eliciting-truthful-answers-from-a-language-model-Paper-Conference.pdf.txt  PERSONA.txt
results/: mlp_vs_linear_probe_results.json
scripts/: aggregate_ood_data.py  check_version_consistency.py  cleanup_versions.py  collect_figures.py  compare_orig_vs_adj_selectivity.py  compute_entanglement_metrics.py  compute_interference.py  compute_optimal_alpha.py  debug_steering_effect.py  expand_defense_analysis.py  gen_14model_figures.py  gen_new_figures.py  gen_umap_oe_collapse.py  generate_latex_tables.py  generate_paper_figures.py  judge_adjusted_alpha.py  mlp_vs_linear_fast.py  mlp_vs_linear_probe.py  plot_alpha_sweep_comparison.py  plot_bfi_dose_response.py  rerun_llama_v2.py  run_adjusted_alpha.py  run_adjusted_alpha.sh  run_adjusted_alpha_bfi_behavioral_v2.py  run_adjusted_alpha_cross_trait.py  run_adjusted_cross_trait.sh  run_all_experiments.py  run_all_experiments.sh  run_base_ablation_v2.sh  run_base_model_ablation.py  run_baselines_5models.py  run_cross_model_experiments.py  run_interjudge.py  run_judge_adjusted.py  run_llama8b_pipeline.sh  run_missing_ood_experiments.sh  run_mistral_v02_gpu.sh  run_new_model_pipeline.sh  run_null_baselines_6models.py  run_pipeline.py  (+3 more)
(+371 files in other folders)
