[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-lens"
version = "2.0.0"
description = "Mechanical Interpretability for Personality Traits: Locating and Steering Persona Vectors in LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Research Team", email = "research@example.com"}
]
keywords = ["llm", "mechanistic-interpretability", "personality", "steering", "representation-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0,<2.2.0",
    "torchvision>=0.15.0,<0.17.0",
    "transformers>=4.35.0,<4.40.0",
    "accelerate>=0.25.0,<0.27.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
    "numpy>=1.24.0,<1.27.0",
    "scipy>=1.10.0,<1.13.0",
    "scikit-learn>=1.3.0,<1.5.0",
    "pandas>=2.0.0,<2.2.0",
    "h5py>=3.9.0",
    "safetensors>=0.4.0",
    "matplotlib>=3.7.0,<3.9.0",
    "seaborn>=0.12.0,<0.14.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
]
latex = [
    # LaTeX support requires external installation
    # See documentation for platform-specific instructions
]

[project.urls]
Homepage = "https://github.com/example/persona-lens"
Documentation = "https://persona-lens.readthedocs.io"
Repository = "https://github.com/example/persona-lens"

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
